# huffman

./: CMakeLists.txt  README.md
BWT/: CMakeLists.txt  bwt.cpp  bwt.h
MTF/: CMakeLists.txt  mtf.cpp  mtf.h
archiver/: CMakeLists.txt  archiver.cpp  archiver.h  main.cpp
tree/: CMakeLists.txt
tree/header/: tree-impl.h
tree/implementation/: tree-impl.cpp
tree/testing/: tester.cpp
tree/testing/gtest/: gtest-all.cc
